@@ -52,6 +52,8 @@ if test "x$GCC" = "xyes"; then
 fi
 changequote([,])dnl
 
+AC_FUNC_ALLOCA
+
 LIBART_LIBDIR='-L${libdir}'
 LIBART_INCLUDEDIR='-I${includedir}'
 LIBART_LIBS='-lart_lgpl'
